namespace ProjectSL.Enemy
{
    public static class EnemyDefineData
    {
        public const string TRIGGER_IDLE = "Idle";
        public const string TRIGGER_PATROL = "Patrol";
        public const string TRIGGER_CHASE = "Chase";
        public const string TRIGGET_MOVE = "Move";
        public const string TRIGGER_ATTACK = "Attack";
        public const string TRIGGER_HIT = "Hit";
        public const string TRIGGER_DIE = "Die";
    }
}

